# adventofcode

./: .gitignore  Cargo.toml  README.md  REPORT.md  aoc-2019.sln  aoc-2020.sln  benchmark.bat  build-pgo.sh  index.html  justfile  run.bat  run.sh  rust-toolchain.toml
.github/workflows/: aoc.yml  benchmark.yml
aoc-2021/: Cargo.toml
aoc-2021/benches/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs
aoc-2021/src/: lib.rs  main.rs
aoc-2021/src/helpers/: graph.rs
aoc-2021/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day06.rs  day07.rs  day08.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  mod.rs
aoc-2022/: Cargo.toml
aoc-2022/benches/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs
aoc-2022/inputs/: day07.txt
aoc-2022/src/: lib.rs  main.rs
aoc-2022/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs
aoc-2023/: Cargo.toml
aoc-2023/benches/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs
aoc-2023/src/: main.rs
aoc-2023/src/solutions/: day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  mod.rs
benches/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
benchmarks/: AOC2020.Benchmarks.csproj  Day11Benchmark.cs  Day15Benchmark.cs  Day17Benchmark.cs  Program.cs  benchmarks.csproj
day01_part_1/: index.html
day01_part_2/: index.html
day02_part_1/: index.html
day02_part_2/: index.html
day03_part_1/: index.html
day03_part_2/: index.html
day04_part_1/: index.html
day04_part_2/: index.html
day05_part_1/: index.html
day05_part_2/: index.html
day06_part_1/: index.html
day06_part_2/: index.html
day07_part_1/: index.html
day07_part_2/: index.html
day08_part_1/: index.html
day08_part_2/: index.html
day09_part_1/: index.html
day09_part_2/: index.html
day10_part_1/: index.html
day10_part_2/: index.html
day11_part_1/: index.html
day11_part_2/: index.html
day12_part_1/: index.html
day12_part_2/: index.html
day13_part_1/: index.html
day13_part_2/: index.html
day14_part_1/: index.html
day14_part_2/: index.html
helpers/: Cargo.toml
helpers/src/: binaryheap.rs  functions.rs  geometry.rs  graph.rs  grid.rs  input.rs  lib.rs  tree.rs
setup/: Cargo.toml
setup/src/: main.rs
setup/templates/: main.rs.tera  solution.rs.tera
solutions-2023/: Cargo.toml
solutions-2023/benches/: day04.rs
solutions-2023/src/: lib.rs  main.rs
solutions-2023/src/solutions/: day02.rs
src/: AOC2020.csproj  Program.cs  Puzzle.cs  aoc-2019.csproj  aoc-2020.csproj  colossal.fig  helpers.rs  lib.rs  main.rs
src/Benchmarks/: Day3Benchmark.cs  Day4Benchmark.cs
src/Extensions/: AOCExtensions.cs
src/Helpers/: Eratosthenes.cs  Point.cs  Vector3.cs  Vector4.cs
src/Models/: Point.cs  Vector3.cs
src/Solutions/: Day01.cs  Day02.cs  Day03.cs  Day04.cs  Day05.cs  Day06.cs  Day07.cs  Day08.cs  Day09.cs  Day1.cs  Day10.cs  Day11.cs  Day12.cs  Day13.cs  Day14.cs  Day15.cs  Day16.cs  Day17.cs  Day18.cs  Day2.cs  Day3.cs  Day4.cs  Day5.cs  Day6.cs  Day7.cs  Day8.cs  Day9.cs
src/benches/: day01.rs
src/helpers/: functions.rs  graph.rs  grid.rs  mod.rs  parser.rs  tree.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day22.rs  day8.rs  helpers.rs  mod.rs  solution.rs
template-solutions/: Cargo.toml  cargo-generate.toml
template-solutions/src/: main.rs
templates/: Cargo.toml.tera  benchmark.rs.tera  main.rs.tera  mod.rs.tera  solution.rs.tera
test/: AOC2020.Tests.csproj  Day03Tests.cs  Day04Tests.cs  Day06Tests.cs  Day07Tests.cs  Day09Tests.cs  Day10Tests.cs  Day11Tests.cs  Day12Tests.cs  Day13Tests.cs  Day14Tests.cs  Day15Tests.cs  Day16Tests.cs  Day17Tests.cs  Day18Tests.cs  Day2Tests.cs  Day3Tests.cs  Day4Tests.cs  Day6Tests.cs  Day7Tests.cs  Day9Tests.cs  Puzzle1.cs  test.csproj
