[workspace]
resolver = "2"
members = ["setup", "aoc-*", "helpers"]
default-members = ["aoc-2023"]

[workspace.dependencies]
glam = "0.24.2"
regex = "1"
itertools = "0.12.0"
priority-queue = "1.3.0"
bitvec = "1.0.1"
hex = "0.4.3"
ptree = "0.4"
color-eyre = "0.6.2"
rayon = "1.6.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dhat = "0.3.2"
divan = "0.1.0"


[profile.release]
lto = true
codegen-units = 1

[profile.dhat]
inherits = "release"
debug = 1
