[package]
name = "aoc-2023"
version = "2023.0.0"
edition = "2021"

[dependencies]
glam = { workspace = true }
regex = { workspace = true }
itertools = { workspace = true }
priority-queue = { workspace = true }
bitvec = { workspace = true }
hex = { workspace = true }
ptree = { workspace = true }
color-eyre = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dhat = { workspace = true }
divan = { workspace = true }
rstest = { workspace = true }
helpers = { path = "../helpers" }


[features]
dhat-heap = []   # if you are doing heap profiling
dhat-ad-hoc = [] # if you are doing ad hoc profiling
tracing = []     # if you are using tracing

# BENCHMARK START
[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day06"
harness = false

[[bench]]
name = "day07"
harness = false

[[bench]]
name = "day08"
harness = false

[[bench]]
name = "day09"
harness = false
# BENCHMARK END
